update research page for vulnerability

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ nav:
   - title: "在研课题"
     url: pages/current.html
 
-  - title: "科研项目"
+  - title: "科研实践"
     url: pages/research.html
   
   - title: "出版著作"
